init git version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# clang intellisense
+.clang_complete
+
+# ignore directories
+.directory
+.svn
+.vscode
+.*/
+**/release
+**/build
+
+# ignore files
+*.patch
+*.o
+
+# include makefiles
+!Makefile
+!makefile
+!*.mk
+!*.make
+
 # ignore sublime cache
 Package Control*
 PythonTestRunner*
